# Slave_I

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CREDITS.md  INSTALL.md  LICENSE  README.md  lv_conf.h  repos.json
.github/workflows/: ci.yml  pages.yml
app/: app.cpp  app.h
app/application/: app_controller.cpp  app_controller.hpp  bootstrap.cpp  bootstrap.hpp
app/application/sessions/: session_service.cpp  session_service.hpp
app/application/workflows/: workflow_engine.cpp  workflow_engine.hpp
app/core/: clock.hpp  error.hpp  result.hpp  type_id.hpp  uuid.hpp  version.hpp
app/core/command_bus/: command_bus.hpp
app/core/diagnostics/: log.hpp
app/core/event_bus/: event_bus.cpp  event_bus.hpp
app/core/scheduler/: task_manager.cpp  task_manager.hpp
app/domain/observations/: observation.hpp
app/domain/radio/: ble.hpp  ble_vendor.hpp  frames.cpp  frames.hpp  offensive.hpp  offensive_codec.cpp  offensive_codec.hpp  oui.cpp  oui.hpp  rpc.hpp  rpc_codec.cpp  rpc_codec.hpp  wifi.hpp
app/domain/sessions/: session.hpp  session_events.hpp  session_repository.hpp
app/domain/workflows/: workflow.hpp
app/hal/: hal.cpp
app/services/capabilities/: capability.cpp  capability.hpp
app/services/radio/: ble_scanner.cpp  ble_scanner.hpp  ble_spammer.cpp  ble_spammer.hpp  capture_store.cpp  capture_store.hpp  deauth_detector.cpp  deauth_detector.hpp  evil_portal_service.cpp  evil_portal_service.hpp  ieee154_store.cpp  ieee154_store.hpp  mock_radio_engine.cpp  mock_radio_engine.hpp  pcap_store.cpp  pcap_store.hpp  probe_store.cpp  probe_store.hpp  radio_console.cpp  radio_console.hpp  radio_coordinator.cpp  (+11 more)
app/ui/: app_shell.cpp  app_shell.hpp
scripts/: bootstrap.sh  build-c6.sh  build-desktop.sh  build-tab5.sh  captest-tab5.sh  check.sh  deploy-c6.sh  dev-desktop.sh  flash-tab5.sh  format.sh  monitor-tab5.sh  run-desktop.sh  test.sh
tests/: CMakeLists.txt
tests/unit/: capability_test.cpp  command_bus_test.cpp  event_bus_test.cpp  frames_test.cpp  navigation_test.cpp  offensive_protocol_test.cpp  radio_engine_test.cpp  rpc_codec_test.cpp  session_test.cpp  smoke_test.cpp  task_manager_test.cpp  theme_test.cpp  workflow_test.cpp
tools/fonts/: ibm_plex_mono_14.c  ibm_plex_mono_20.c
web-flasher/: index.html  manifest.json
(+48 files in other folders)
